<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.SignupActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="326dp"
        android:layout_height="51dp"
        android:background="@drawable/round_button"
        android:text="@string/sign_up_button"
        android:textColor="@color/textWithDarkBackground"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="1015dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="169dp"
        android:layout_height="147dp"
        android:src="@drawable/programming_img"
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="44dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="326dp"
        android:layout_height="52dp"
        android:background="@drawable/text_field_background"
        android:ems="10"
        android:hint="@string/password_sign_up"
        android:inputType="textPassword"
        android:paddingHorizontal="21dp"
        android:textColor="@color/subText"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="460dp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="326dp"
        android:layout_height="52dp"
        android:background="@drawable/text_field_background"
        android:ems="10"
        android:hint="@string/email_sign_up"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="21dp"
        android:textColor="@color/subText"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="390dp" />

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="326dp"
        android:layout_height="52dp"
        android:background="@drawable/text_field_background"
        android:ems="10"
        android:hint="@string/phone_number_sign_up"
        android:inputType="phone"
        android:paddingHorizontal="21dp"
        android:textColor="@color/subText"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="533dp" />

    <EditText
        android:id="@+id/surnameEditText"
        android:layout_width="326dp"
        android:layout_height="52dp"
        android:background="@drawable/text_field_background"
        android:ems="10"
        android:hint="@string/surname_sign_up"
        android:inputType="textPersonName"
        android:paddingHorizontal="21dp"
        android:textColor="@color/subText"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="319dp" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="326dp"
        android:layout_height="52dp"
        android:background="@drawable/text_field_background"
        android:ems="10"
        android:hint="@string/name_sign_up"
        android:inputType="textPersonName"
        android:paddingHorizontal="21dp"
        android:textColor="@color/subText"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="252dp" />

    <EditText
        android:id="@+id/firstInfoEditText"
        android:layout_width="326dp"
        android:layout_height="52dp"
        android:background="@drawable/text_field_background"
        android:ems="10"
        android:hint="@string/info_sign_up"
        android:inputType="textPersonName"
        android:paddingHorizontal="21dp"
        android:textColor="@color/subText"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="741dp" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="326dp"
        android:layout_height="52dp"
        android:background="@drawable/text_field_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingHorizontal="21dp"
        android:text="Type"
        android:textColor="@color/subText"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="679dp" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="326dp"
        android:layout_height="52dp"
        android:background="@drawable/text_field_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingHorizontal="21dp"
        android:text="Type"
        android:textColor="@color/subText"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="835dp" />

    <EditText
        android:id="@+id/secondInfoEditText"
        android:layout_width="326dp"
        android:layout_height="52dp"
        android:background="@drawable/text_field_background"
        android:ems="10"
        android:hint="@string/info2_sign_up"
        android:inputType="textPersonName"
        android:paddingHorizontal="21dp"
        android:textColor="@color/subText"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="897dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:text="@string/contact_information_sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/mainText"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="623dp" />

</androidx.constraintlayout.widget.ConstraintLayout>